--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^5.1.4",
     "@astrojs/solid-js": "^2.0.2",
     "@astrojs/tailwind": "^3.0.1",
-    "astro": "^2.0.16",
+    "astro": "^2.5.7",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
   }
